--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -381,7 +381,7 @@ header {
                                     <p class="episode-info">Episode {{ episode.number }}</p>
                                     <p class="episode-info">Air Date: {{ episode.airdate }}</p>
                                     <p class="episode-info">Rating: {{ episode.vote_average }} / 10</p>
-                                    <a href="#" class="episode-watch-button" data-season="{{ season_data.season.number }}" data-episode="{{ episode.number }}">Watch Episode</a>
+                                    <a href="#" class="watch-button" data-season="{{ season_data.season.number }}" data-episode="{{ episode.number }}">Watch Episode</a>
                                 </div>
                             {% endfor %}
                         </div>
