--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -392,7 +392,7 @@ header {
             <!-- Embed Series -->
             {% if serie.id %}
                 <div style="margin-bottom: 40px;">
-                    <iframe src="https://multiembed.mov/?video_id={{ serie.id }}&tmdb=1&tv=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://multiembed.mov/?video_id={{ serie.tmdb_id }}&tmdb=1&tv=1" width="100%" height="500" frameborder="0" allowfullscreen></iframe>
                 </div>
             {% endif %}
         </div>
@@ -406,7 +406,7 @@ header {
                 
                 const seasonNumber = this.getAttribute('data-season');
                 const episodeNumber = this.getAttribute('data-episode');
-                const videoId = '{{ serie.id }}'; // Assuming you're using TMDB ID
+                const videoId = '{{ serie.tmdb_id }}'; // Assuming you're using TMDB ID
                 
                 // Open the corresponding episode in MultiEmbed
                 const multiembedUrl = `https://multiembed.mov/directstream.php?video_id=${videoId}&tmdb=1&s=${seasonNumber}&e=${episodeNumber}`;
