--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -321,6 +321,9 @@ header {
                 </p>
                 <p><strong>Runtime:</strong> {{ movie.runtime }} minutes</p>
                 <a href="#" class="download-button" id="downloadButton">Watch Now</a>
+                {% if movie.vipstream_url %}
+                <a href="https://multiembed.mov/directstream.php?video_id={{ movie.tmdb_id }}&tmdb=1" class="download-button" target="_blank">Download from VIPstream</a>
+                {% endif %}
             </div>
         </div>
         
