--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -472,8 +472,8 @@ header {
         <button class="openbtn" onclick="openNav()">☰</button>
         <div class="logo">Ease-E-Movies</div>
         <div class="navbar">
-            <a href="#">Home</a>
-            <a href="#">Categories</a>
+            <a href="{% url 'home' %}">Home</a>
+            <a href="{% url 'genre_list' %}">Categories</a>
             <a href="#">My List</a>
             <a href="#">Profile</a>
         </div>
@@ -490,7 +490,7 @@ header {
     <!-- Off-canvas Sidebar -->
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="#">Home</a>
+        <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'action_movies' %}">Action</a>
         <a href="{% url 'animation_movies' %}">Animation</a>
         <a href="{% url 'comedy_movies' %}">Comedy</a>
