--- a/moviedb/templates/series.html
+++ b/moviedb/templates/series.html
@@ -432,7 +432,7 @@ header {
         </nav>
         <div class="search-container">
             <form action="{% url 'search_results' %}" method="GET">
-                    <input type="text" placeholder="Search..." name="query">
+                    <input type="text" placeholder="Search..." >
                     <button>
                         <span class="search-icon">🔍</span>
                     </button>
