--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -473,7 +473,7 @@ header {
         <div class="logo">Ease-E-Movies</div>
         <div class="navbar">
             <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'genre_list' %}">Categories</a>
+            <a href="#">Categories</a>
             <a href="#">My List</a>
             <a href="#">Profile</a>
         </div>
