--- a/moviedb/templates/search_results.html
+++ b/moviedb/templates/search_results.html
@@ -185,8 +185,8 @@
         <div class="navbar">
             <div>
                 <a href="{% url 'home' %}">Home</a>
-                <a href="#">TV Shows</a>
-                <a href="#">Movies</a>
+                <a href="{% url 'series' %}">TV Shows</a>
+                <a href="{% url 'home' %}">Movies</a>
                 <a href="#">My List</a>
             </div>
             <div class="search-container">
@@ -199,6 +199,14 @@
     </header>
 
     <div class="container">
+        {% if errors %}
+            <div class="error">
+                {% for error in errors %}
+                    <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+        {% endif %}
+    
         {% if movies %}
         <div class="results-section">
             <h2>Movies</h2>
@@ -223,7 +231,7 @@
             </div>
         </div>
         {% endif %}
-
+    
         {% if series %}
         <div class="results-section">
             <h2>TV Shows</h2>
@@ -231,11 +239,11 @@
                 {% for serie in series %}
                 <div class="result-item">
                     <a href="{% url 'series_details' pk=serie.pk %}">
-                        <img src="{{ serie.poster }}" alt="{{ serie.title }} Poster">
+                        <img src="https://image.tmdb.org/t/p/w500{{ serie.poster_path }}" alt="{{ serie.title }} Poster">
                         <div class="result-info">
                             <h3>{{ serie.title }}</h3>
                             <p>{{ serie.release_date }}</p>
-                            <p>{{ serie.summary|safe|truncatewords:20 }}</p>
+                            <p>{{ serie.overview|safe|truncatewords:20 }}</p>
                         </div>
                         <div class="result-title">
                             <h3>{{ serie.title }}</h3>
@@ -248,7 +256,7 @@
             </div>
         </div>
         {% endif %}
-
+    
         {% if not movies and not series %}
         <p>No results found for your search.</p>
         {% endif %}
