--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -278,6 +278,29 @@ footer {
         display: none;
     }
 
+    .search-container {
+        width: 100%;
+    }
+
+    .search-container form {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .search-container input[type=text] {
+        width: 100%;
+        padding-right: 30px;
+        max-width: none; /* Remove max-width to allow full-width on small screens */
+        box-sizing: border-box;
+    }
+
+    .search-container button {
+        margin-left: 0;
+        margin-top: 8px;
+        width: 100%;
+    }
+
     /* Search adjustments */
     .search-container input[type=text] {
         width: 30px;
